fix add prod to cart and click order

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
     overflow: scroll;
 
     --main-color: #312783;
-    --main-color-90: #322783ea;
+    --main-color-90: #5849ca;
     --max-width-xl: 1200px;
     --max-width-2xl: 1500px;
 
